kubernetes/jenkins-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jenkins-stripprefix
  namespace: jenkins
spec:
  stripPrefix:
    prefixes:
      - /jenkins
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: jenkins-jenkins-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
